[fix] Fix some format bugs and add inbrowser param to gradio

--- a/rag_data/百度百科.md
+++ b/rag_data/百度百科.md
@@ -1,42 +1,31 @@
-北京市海淀区中关村第三小学
+# 北京市海淀区中关村第三小学
+
 北京市海淀区中关村第三小学，地处中关村科技园核心，是一所公办小学。学校有教学班114个。
 2020年4月26日，学校被认定为北京市第二批义务教育学校管理标准达标学校 。2020年5月，入选北京市中小学科技教育示范学校名单。
-2025年8月，中关村第三小学永新分校全面竣工并通过验收。学校进行教学设备最后调试，首批教师团队已完成岗前培训，并于9月1日正式开学。 
-
-
+2025年8月，中关村第三小学永新分校全面竣工并通过验收。学校进行教学设备最后调试，首批教师团队已完成岗前培训，并于9月1日正式开学。
 
 历史沿革
 2025年8月，中关村第三小学永新分校全面竣工并通过验收。这座占地1.2万平方米、建筑面积1.37万平方米的现代化校园，将为海淀北部新增720个优质学位。学校进行教学设备最后调试，首批教师团队已完成岗前培训，并于9月1日正式开学。
-
 
 办学理念
 创新的办学理念，和谐的教师队伍，协作的教学氛围，无私奉献的精神；为全体学生的自主发展奠定了坚实的基础。“自主、创新、和谐、奉献、协作”十字办学方针，引领三小人在素质教育的征程上不断创造着辉煌。
 多年来，中关村三小以全新的办学理念，高素质的教师队伍，适合儿童成长的育人环境，高效的教学质量，赢得了社会各界的赞誉，家长的信赖。“关注所有学生，关注所有学生的全面发展；关注发展中的个性发展”，“让孩子们头顶艺术，脚踩文学，怀揣梦想”是三小教育的基本理念。
 
-
-
 师资队伍
 中关村三小现有教学班114个，教师306人，其中特级教师1人，中学高级教师4人，北京市青年骨干教师10人，区骨干教师45人，区学科带头人28人，中心级学科带头人34人，90%以上的教师学历达到大本水平。
 校领导班子凭着对教育事业的满腔热忱，对教育发展的高瞻远瞩，以全新的办学理念，为全体教师营造了锐意改革进取的崭新天地。以“教师自身价值与学校发展目标同命运”这一主导思想，抓教师队伍建设。
 
-
-
 学校建筑
 整个学校的建筑物是一个类似客家土楼建筑的综合体，体现的是“天人合一”大家庭和谐共处的东方哲学思想。
-
-
 
 地理位置
 北京市海淀区中关村第三小学
 北京市海淀区万柳中路23号北门
 
-
-
 学校荣誉
 为打造海淀区、北京市乃至全国的教育品牌，三小人在不懈地努力，创出了骄人的业绩。先后被评为北京市校园文化示范校、市科技教育示范校、市体育卫生工作先进校、市科研先进校、区教学管理示范校、区艺术教育示范校、区教育先进集体、区德育先进校、区青年教师先进集体。
-2020年5月，入选北京市中小学科技教育示范学校名单。 
-2021年3月15日，被北京市委办公厅、北京市人民政府办公厅授予“北京市扶贫协作先进集体”称号。 
-
+2020年5月，入选北京市中小学科技教育示范学校名单。
+2021年3月15日，被北京市委办公厅、北京市人民政府办公厅授予“北京市扶贫协作先进集体”称号。
 
 学校优势
 运动项目
