--- a/rag_data/学校简介.md
+++ b/rag_data/学校简介.md
@@ -1,26 +1,16 @@
+# 北京市海淀区中关村第三小学
+
 中关村第三小学始建于1981年，秉承海淀教育创新基因，栉风沐雨、砥砺前行， 历练了一支有理想信念、有道德情操、有仁爱之心和扎实学识的高素质教师队伍。集团目前有：万柳北校区、万柳南校区、红山校区、科技园分校、西颐小学、雄安雄东实验学校、顺义学校、怀柔学校、丰台学校、房山学校、中法实验联盟校、附设幼儿班。
 
-
-
-
-
 面向未来，聚焦立德树人，用全球视野定位学校的发展。用先进的理念，扎实的创新行动，逐步创造了一所植根中国文化、融通中外先进办学思想的现代化学校 ，一所可以与世界好学校比肩同行的学校，一所充满成长机会的好学校。作为生活在中关村国家自主创新示范区的学校，始终与国内外优秀学校比肩同行。
-
-
-
-
 
 办学理念：大家三小
 建设一个属于每个人、需要每个人、成就每个人的“大家三小”；
 一个拥有“北京气质、世界品位、大家风范”的“大家三小”；
 一个处处充满成长机会的“大家三小”。
 
- 
-
 目   标：培养将来在世界上任何一个地方都是受欢迎的、有能力的、有担当的人。
 校   训： 家和成学   知行合一   立天地心 。
-
-
 
 办学特色：
 真实的学习 以“真实的学习”为主线的生态大课程，促进师生和生生之间形成彼此更深度学习，实现有效的交流沟通、团队协同创新能力的提升。每个学生都有多样的学习机会，和贯穿全程的跨学科、跨年龄的综合实践的学习，习得面向未来的可持续发展的学习和创新实践能力。
@@ -28,17 +18,10 @@
 邻家孩子 创造机会让乡村、民族、城市和国际的孩子获得在一起玩耍、一起学习的共同经历，从小植入世界和平的种子。
 大雁的积极行为 以雁阵精神作为团队合作的准则，建立“安全、责任、尊重、规程、合作”为基石的积极行为养成与支持体系。通过家校一致的、稳定的、不同空间场合下的积极行为的习得，助力每个孩子成为一个受欢迎的人。
 
- 
-
-
-
 使   命： 教育孩子  团结人们  引领社会
 一所学校，是一方水土的传统得以永续的地方。
 一所学校，是一个家庭与众多家庭组成的共同体，对未来予以憧憬和寄托，携手共处共进的地方。
 一所学校，是一群拥有共同教育情怀与科学和专业知识的教育者，教育孩子，团结人们，引领社会发展的地方。
 是一个充满学习和成长机会的地方。
 
- 
-
-
-主要成绩和荣誉：先后获得国家级教学成果二等奖、北京市基础教育教学成果奖特等奖、中国教育创新成果优秀教育“SERVE奖”、全国中小学人工智能基地、全国国防教育示范校、北京市基础教育课程建设优秀成果先进单位、北京市基础教育科研先进学校、北京市中小学党建示范点、北京市中小学校园环境示范校、北京市民族团结教育示范校、北京市中小学文明校园、北京健康促进学校、北京市科技教育示范校、北京市卫生工作示范校、北京市科研先进校、北京市体育传统项目学校、北京2008奥林匹克示范校、全国课程改革骨干教师研修基地、教育部名校长领航校长培训基地、北京市金鹏科技团、北京市金帆舞蹈团、北京市金帆合唱团、北京市中小学校长培训基地、海淀区交通安全工作先进单位、海淀区教育系统工会工作先进单位等30多项荣誉称号。 
+主要成绩和荣誉：先后获得国家级教学成果二等奖、北京市基础教育教学成果奖特等奖、中国教育创新成果优秀教育“SERVE奖”、全国中小学人工智能基地、全国国防教育示范校、北京市基础教育课程建设优秀成果先进单位、北京市基础教育科研先进学校、北京市中小学党建示范点、北京市中小学校园环境示范校、北京市民族团结教育示范校、北京市中小学文明校园、北京健康促进学校、北京市科技教育示范校、北京市卫生工作示范校、北京市科研先进校、北京市体育传统项目学校、北京2008奥林匹克示范校、全国课程改革骨干教师研修基地、教育部名校长领航校长培训基地、北京市金鹏科技团、北京市金帆舞蹈团、北京市金帆合唱团、北京市中小学校长培训基地、海淀区交通安全工作先进单位、海淀区教育系统工会工作先进单位等30多项荣誉称号。
